# KDevelop-FlawFinder

./: .gitignore  CMakeLists.txt  FlawFinderPlugin.cpp  FlawFinderPlugin.h  FlawFinderView.cpp  FlawFinderView.h  KDevelop-FlawFinder.kdev4  KDevelopFlawFinder.desktop  README
ui/: FlawFinderView.ui
